--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,2 +1,10 @@
 @import url('https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/main.min.css');
 @import url('https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/daygrid.min.css');
+
+.content {
+    padding-top: 7rem;
+  }
+
+  .content-excluded {
+    padding-top: 0;
+  }
