--- a/src/app/componentes/admin/negocios-admin/negocios-admin.component.html
+++ b/src/app/componentes/admin/negocios-admin/negocios-admin.component.html
@@ -3,9 +3,9 @@
     <div class="flex justify-center mt-6">
   <button
     (click)="agregarNegocio()"
-    class="btn-25 px-6 py-3 bg-teal-400 text-white text-lg font-semibold rounded-full shadow-md hover:bg-teal-500 focus:ring-2 focus:ring-teal-500"
-  >
-    Agregar nuevo negocio
+    class="btn-77 max-w-xs px-4 py-2 text-white hover:text-teal-600 bg-teal-400 rounded-md hover:bg-white"
+    >
+    NUEVO NEGOCIO
   </button>
 </div>
 }
