--- a/src/app/componentes/calendario/calendario.component.html
+++ b/src/app/componentes/calendario/calendario.component.html
@@ -1,6 +1,4 @@
-<app-navegacion></app-navegacion>
 
-<div>
 <section class="relative bg-gradient-to-r from-teal-500 to-blue-400 text-white p-8 rounded-lg shadow-2xl">
   <!-- Contenedor principal con flex -->
   <div class="flex flex-col md:flex-row items-center lg:space-x-8 justify-center">
@@ -12,10 +10,10 @@
       </h2>
       <p class="text-lg mb-6">Únete a nosotros para no perdertelos.</p>
 
-      <!-- Botón para ver más eventos -->
+      <!-- Botón para ver más eventos 
       <a href="#eventos" class="inline-block bg-yellow-400 text-white font-semibold text-lg py-2 px-6 rounded-full shadow-md hover:bg-yellow-500 transition duration-300 ease-in-out transform hover:scale-105">
         Ver más eventos
-      </a>
+      </a>-->
     </div>
 
   </div>
