--- a/src/app/componentes/mapa/mapa.component.html
+++ b/src/app/componentes/mapa/mapa.component.html
@@ -1,5 +1,3 @@
-<app-navegacion></app-navegacion>
-
 <section class="relative bg-gradient-to-r from-teal-500 to-blue-400 text-white p-8 rounded-lg shadow-2xl">
   <!-- Contenedor principal con flex -->
   <div class="flex flex-col md:flex-row items-center lg:space-x-8 justify-center">
@@ -10,10 +8,10 @@
       </h2>
       <p class="text-lg mb-6">Organizamos los restaurantes, las panaderías y las tiendas donde puedes encontrar productos y comidas uruguayas.</p>
 
-      <!-- Botón para ver más eventos -->
+      <!-- Botón para ver más eventos 
       <a href="#eventos" class="inline-block bg-yellow-400 text-white font-semibold text-lg py-2 px-6 rounded-full shadow-md hover:bg-yellow-500 transition duration-300 ease-in-out transform hover:scale-105">
         
-      </a>
+      </a>-->
     </div>
 
     <!-- Imagen 
@@ -28,7 +26,7 @@
       <!-- Contenedor Principal -->
       <div class="flex flex-col gap-6 lg:flex-row shadow-lg rounded-lg overflow-hidden h-full">
         <!-- Mapa -->
-        <div id="map" class="h-[400px] lg:h-[600px] flex-[3] rounded-t-lg lg:rounded-l-lg lg:rounded-tr-none flex items-center justify-center relative">
+        <div id="map" class="h-[auto] lg:h-[600px] lg:w-3/4 w-full flex rounded-t-lg lg:rounded-l-lg lg:rounded-tr-none items-center justify-center relative">
           <p class="text-gray-300">Mapa Interactivo Aquí</p>
           <!-- Filtro de Categorías -->
           <div class="filtro absolute top-4 right-4 bg-white p-4 rounded-lg shadow-lg z-10 max-w-xs">
