--- a/src/app/componentes/mapa/mapa.component.scss
+++ b/src/app/componentes/mapa/mapa.component.scss
@@ -49,3 +49,14 @@ html, body {
   overflow-wrap: break-word;
   display: block;
 }
+
+@media (max-width: 1024px) {
+  #map {
+    height: 300px;
+    width: 100%;
+  }
+  .filtro {
+    top: auto;
+    bottom: 1rem;
+  }
+}
