--- a/src/app/componentes/navegacion/navegacion.component.html
+++ b/src/app/componentes/navegacion/navegacion.component.html
@@ -1,158 +1,272 @@
-<nav>
-  <div class="mx-auto max-w-screen-2xl px-4 sm:px-6 lg:px-8">
-    <div class="relative flex h-28 items-center ">
-      <!-- Logo -->
-      <div class="flex items-center">
-        <a routerLink="/home">
-          <img class="h-16 w-auto" src="assets/img/logo-uru.png" alt="logo-uruguayos">
-        </a>
+<div class="mx-auto max-w-screen-2xl px-4 md:px-6 lg:px-8">
+  <div class="relative flex h-28 items-center">
+    <!-- Logo -->
+    <div class="flex items-center">
+      <a routerLink="/home">
+        <img
+          class="h-16 w-auto"
+          src="assets/img/logo-uru.png"
+          alt="logo-uruguayos"
+        />
+      </a>
+    </div>
+    <!--  Menu escritorio -->
+    <div class="hidden lg:flex flex-1 items-center justify-between">
+      <div class="flex space-x-4">
+        <a
+          routerLink="/home"
+          routerLinkActive="bg-teal-400 text-white"
+          class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white"
+          >Home</a
+        >
+        <a
+          routerLink="/presentacion"
+          routerLinkActive="bg-teal-400 text-white"
+          class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white"
+          >Historia</a
+        >
+        <a
+          routerLink="/blog"
+          routerLinkActive="bg-teal-400 text-white"
+          class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white"
+          >Noticias</a
+        >
+        <a
+          routerLink="/calendario"
+          routerLinkActive="bg-teal-400 text-white"
+          class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white"
+          >Eventos</a
+        >
+        <a
+          routerLink="/mapa"
+          routerLinkActive="bg-teal-400 text-white"
+          class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white"
+          >Negocios</a
+        >
+        <a
+          routerLink="/graficos"
+          routerLinkActive="bg-teal-400 text-white"
+          class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white"
+          >Gráficos</a
+        >
       </div>
-      <!-- Desktop Menu -->
-      <div class="hidden sm:flex flex-1 items-center justify-between">
-        <div class="flex space-x-4">
-          <a routerLink="/home" routerLinkActive="bg-teal-400 text-white"
-            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Home</a>
-          <a routerLink="/presentacion" routerLinkActive="bg-teal-400 text-white"
-            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Historia</a>
-          <a routerLink="/blog" routerLinkActive="bg-teal-400 text-white"
-            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Noticias</a>
-          <a routerLink="/calendario" routerLinkActive="bg-teal-400 text-white"
-            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Eventos</a>
-          <a routerLink="/mapa" routerLinkActive="bg-teal-400 text-white"
-            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Negocios</a>
-          <a routerLink="/graficos" routerLinkActive="bg-teal-400 text-white"
-            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Gráficos</a>
-        </div>
-        <div class="flex items-center space-x-4">
-          @if(isAdmin){
-          <a routerLink="/admin" routerLinkActive="bg-teal-400 text-white"
-          class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Panel</a>
-        }
-
-        @if (isLoggedIn) {
-          <span class="text-lg font-semibold text-teal-400">Hola, {{ userName }}</span>
-          <div class="relative">
-            <!-- Foto de usuario -->
-            <button class="h-8 w-8 rounded-full" (click)="toggleDropdownMenu()">
-              <img [src]="userImage" alt="img-perfil" class="h-8 w-8 rounded-full">
+      <div class="flex items-center space-x-4">
+        @if(isAdmin){
+        <a
+          routerLink="/admin"
+          routerLinkActive="bg-teal-400 text-white"
+          class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white"
+          >Panel</a
+        >
+        } @if (isLoggedIn) {
+        <span class="saludo">Hola, {{ userName }}</span>
+        <div class="relative">
+          <!-- Foto -->
+          <button class="h-8 w-8 rounded-full" (click)="toggleDropdownMenu()">
+            <img
+              [src]="userImage"
+              alt="img-perfil"
+              class="h-8 w-8 rounded-full"
+            />
+          </button>
+          <!-- Opciones del user -->
+          @if (isDropdownMenuOpen) {
+          <div
+            class="absolute right-0 mt-2 w-48 bg-white rounded-md shadow-lg z-10"
+          >
+            <button
+              (click)="router.navigate(['/perfil'])"
+              class="block w-full px-4 py-2 text-sm text-gray-700 hover:bg-teal-400"
+            >
+              Ver Perfil
             </button>
-            <!-- Opciones del usuario -->
-            @if (isDropdownMenuOpen) {
-              <div class="absolute right-0 mt-2 w-48 bg-white rounded-md shadow-lg z-10">
-                <button (click)="router.navigate(['/perfil'])"
-                        class="block w-full px-4 py-2 text-sm text-gray-700 hover:bg-teal-400">
+            <button
+              (click)="logout()"
+              class="block w-full px-4 py-2 text-sm text-gray-700 hover:bg-teal-400"
+            >
+              Salir
+            </button>
+          </div>
+          }
+        </div>
+        }
+        <!-- Botones de Login y Registro -->
+        @if (!isLoggedIn) {
+        <button
+          (click)="openModal('login')"
+          class="bg-teal-400 text-white rounded-md px-3 py-2 text-sm font-medium hover:bg-teal-600"
+        >
+          Login
+        </button>
+
+        <button
+          (click)="openModal('registro')"
+          class="bg-yellow-400 text-white rounded-md px-3 py-2 text-sm font-medium hover:bg-teal-600"
+        >
+          Registro
+        </button>
+        } @if(showModal === 'login') {
+        <app-login></app-login>
+        } @if(showModal === 'registro') {
+        <app-registro></app-registro>
+        }
+      </div>
+    </div>
+
+    <!-- Mobile menu boton -->
+    <div class="absolute inset-y-0 right-0 flex items-center lg:hidden">
+      <button
+        (click)="toggleMobileMenu()"
+        class="inline-flex items-center justify-center rounded-md p-2 text-yellow-400 hover:bg-yellow-600 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
+      >
+        <span class="sr-only">Open main menu</span>
+        <svg
+          class="block h-6 w-6"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          aria-hidden="true"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+          />
+        </svg>
+      </button>
+    </div>
+
+  </div>
+</div>
+
+    <!-- Mobile Menu -->
+    @if (!isMobileMenuOpen) { } 
+    @if (isMobileMenuOpen) {
+      <div class="fixed inset-0 flex justify-end " (click)="closeMobileMenu()">
+        <div class="lg:hidden block">
+          <div class="dropdown-menu space-y-1 px-2 pb-3 pt-2 text-teal-800">
+            <a
+              routerLink="/home"
+              routerLinkActive="bg-teal-600 text-white"
+              class="block rounded-md px-3 py-2 text-base font-medium hover:bg-teal-600 hover:text-white"
+              >Home</a
+            >
+            <a
+              routerLink="/presentacion"
+              routerLinkActive="bg-teal-600 text-white"
+              class="block rounded-md px-3 py-2 text-base font-medium hover:bg-teal-600 hover:text-white"
+              >Historia</a
+            >
+            <a
+              routerLink="/blog"
+              routerLinkActive="bg-teal-600 text-white"
+              class="block rounded-md px-3 py-2 text-base font-medium hover:bg-teal-600 hover:text-white"
+              >Noticias</a
+            >
+            <a
+              routerLink="/calendario"
+              routerLinkActive="bg-teal-600 text-white"
+              class="block rounded-md px-3 py-2 text-base font-medium hover:bg-teal-600 hover:text-white"
+              >Eventos</a
+            >
+            <a
+              routerLink="/mapa"
+              routerLinkActive="bg-teal-600 text-white"
+              class="block rounded-md px-3 py-2 text-base font-medium hover:bg-teal-600 hover:text-white"
+              >Negocios</a
+            >
+            <a
+              routerLink="/graficos"
+              routerLinkActive="bg-teal-600 text-white"
+              class="block rounded-md px-3 py-2 text-base font-medium hover:bg-teal-600 hover:text-white"
+              >Gráficos</a
+            >
+  
+            @if (isAdmin) {
+            <a
+            routerLink="/admin"
+            routerLinkActive="bg-teal-600 text-white"
+              class="block rounded-md px-3 py-2 text-base font-medium hover:bg-teal-600 hover:text-white"
+            >
+              Panel
+            </a>
+            }
+            <div class="dropdown-container" (click)="$event.stopPropagation()">
+              <!-- Mostrar nombre, foto y flecha si hay usuario -->
+              @if (isLoggedIn) {
+              <div
+                class="flex items-center justify-center space-x-2 mt-2"
+                (click)="toggleDropdownMenu()"
+              >
+                <div class="flex items-center space-x-2">
+                  <img
+                    class="h-8 w-8 rounded-full"
+                    [src]="userImage"
+                    alt="img-perfil"
+                  />
+                  <span class="text-sm font-semibold text-teal-800"
+                    >Hola, {{ userName }}</span
+                  >
+                </div>
+                <!-- Flecha hacia abajo -->
+                <svg
+                  class="h-5 w-5 text-teal-900 transform"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                  aria-hidden="true"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M19 9l-7 7-7-7"
+                  />
+                </svg>
+              </div>
+  
+              <!-- Opciones del usuario -->
+              @if (isDropdownMenuOpen) {
+              <div class="flex flex-col space-y-2 mt-2 dropdown-menu">
+                <button
+                  (click)="router.navigate(['/perfil'])"
+                  class="block w-full px-4 py-2 text-base font-medium hover:bg-teal-800"
+                >
                   Ver Perfil
                 </button>
-                <button (click)="logout()"
-                        class="block w-full px-4 py-2 text-sm text-gray-700 hover:bg-teal-400">
+                <button
+                  (click)="logout()"
+                  class="block w-full px-4 py-2 text-base font-medium hover:bg-teal-800"
+                >
                   Salir
                 </button>
               </div>
+              } }
+            </div>
+  
+            <!-- Botones de Login y Registro -->
+            @if (!isLoggedIn) {
+            <button
+              (click)="openModal('login'); $event.stopPropagation()"
+              class="block w-full bg-teal-400 text-white rounded-md px-3 py-2 text-base font-medium hover:bg-teal-600"
+            >
+              Login
+            </button>
+            <button
+            (click)="openModal('registro'); $event.stopPropagation()"
+              class="block w-full bg-yellow-400 text-white rounded-md px-3 py-2 text-base font-medium hover:bg-teal-600"
+            >
+              Registro
+            </button>
             }
+            @if(showModal === 'login') {
+              <app-login></app-login>
+              } @if(showModal === 'registro') {
+              <app-registro></app-registro>
+              }
           </div>
-        }
-        <!-- Botones de Login y Registro si no está logeado -->
-        @if (!isLoggedIn) {
-          <button (click)="openModalLogin()"
-          class="bg-teal-400 text-white rounded-md px-3 py-2 text-sm font-medium hover:bg-teal-600">
-          Login
-          </button>
-          @if(showLoginModal) {
-          <app-login></app-login>
-        }
-          <button (click)="openModalRegistro()"
-                  class="bg-yellow-400 text-white rounded-md px-3 py-2 text-sm font-medium hover:bg-teal-600">
-            Registro
-          </button>
-          @if(showRegistroModal){
-            <app-registro></app-registro>
-          }
-        }
         </div>
       </div>
-  
-      <!-- Mobile Menu Button -->
-      <div class="absolute inset-y-0 right-0 flex items-center sm:hidden">
-        <button
-          (click)="toggleMobileMenu()"
-          class="inline-flex items-center justify-center rounded-md p-2 text-yellow-400 hover:bg-yellow-600 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
-          <span class="sr-only">Open main menu</span>
-          <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-            stroke="currentColor" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-          </svg>
-        </button>
-      </div>
-    </div>
-  </div>
-
-<!-- Mobile Menu -->
-<div>
-  @if (!isMobileMenuOpen) {
-  }
-  @if (isMobileMenuOpen) {
-    <div class="fixed inset-0 bg-black bg-opacity-50 z-40">
-    <div class="md:hidden block">
-      <div class="space-y-1 px-2 pb-3 pt-2">
-        <a routerLink="/home" routerLinkActive="bg-teal-600 text-white"
-          class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-teal-600 hover:text-white">Home</a>
-        <a routerLink="/presentacion" routerLinkActive="bg-teal-600 text-white"
-          class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-teal-600 hover:text-white">Historia</a>
-        <a routerLink="/blog" routerLinkActive="bg-teal-600 text-white"
-          class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-teal-600 hover:text-white">Noticias</a>
-        <a routerLink="/calendario" routerLinkActive="bg-teal-600 text-white"
-          class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-teal-600 hover:text-white">Eventos</a>
-        <a routerLink="/mapa" routerLinkActive="bg-teal-600 text-white"
-          class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-teal-600 hover:text-white">Negocios</a>
-        <a routerLink="/graficos" routerLinkActive="bg-teal-600 text-white"
-          class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-teal-600 hover:text-white">Gráficos</a>
-
-        @if (isAdmin) {
-          <button class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-teal-600 hover:text-white">
-            Panel
-          </button>
-        }
-
-        <!-- Mostrar nombre, foto y flecha si el usuario está logueado -->
-        @if (isLoggedIn) {
-          <div class="flex items-center justify-center space-x-2 mt-2" (click)="toggleDropdownMenu()">
-            <div class="flex items-center space-x-2">
-              <img class="h-8 w-8 rounded-full" [src]="userImage" alt="img-perfil">
-              <span class="text-sm font-semibold text-teal-400">Hola, {{ userName }}</span>
-            </div>
-            <!-- Flecha hacia abajo -->
-            <svg class="h-5 w-5 text-teal-600 transform" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-            </svg>
-          </div>
-
-          <!-- Opciones del usuario -->
-          @if (isDropdownMenuOpen) {
-            <div class="flex flex-col space-y-2 mt-2">
-              <button (click)="router.navigate(['/perfil'])" class="block w-full px-4 py-2 text-base font-medium text-gray-300 hover:bg-teal-400">
-                Ver Perfil
-              </button>
-              <button (click)="logout()" class="block w-full px-4 py-2 text-base font-medium text-gray-300 hover:bg-teal-400">
-                Salir
-              </button>
-            </div>
-          }
-        }
-
-        <!-- Botones de Login y Registro si no está logeado -->
-        @if (!isLoggedIn) {
-          <button routerLink="/login"
-                  class="block w-full bg-teal-400 text-white rounded-md px-3 py-2 text-base font-medium hover:bg-teal-600">
-            Login
-          </button>
-          <button routerLink="/registro"
-                  class="block w-full bg-yellow-400 text-white rounded-md px-3 py-2 text-base font-medium hover:bg-teal-600">
-            Registro
-          </button>
-        }
-      </div>
-    </div>
-    </div>
-  }
-
-</div>
+      }
