--- a/src/app/componentes/admin/blog-admin/blog-admin.component.scss
+++ b/src/app/componentes/admin/blog-admin/blog-admin.component.scss
@@ -1,12 +1,11 @@
 ::ng-deep .ql-picker-label::after {
-    display: none !important; /* Oculta las flechas */
+    display: none !important;
   }
   
   ::ng-deep .ql-picker {
-    display: none !important; /* Oculta cualquier elemento de tipo picker */
+    display: none !important;
   }
-  
-  /* Controla la visibilidad del contenido de Quill */
+
   ::ng-deep .ql-container {
     overflow: hidden !important;
 }
