--- a/src/app/componentes/graficos/graficos.component.html
+++ b/src/app/componentes/graficos/graficos.component.html
@@ -1,5 +1,3 @@
-<app-navegacion></app-navegacion>
-
 <section class="relative bg-gradient-to-r from-teal-500 to-blue-400 text-white p-8 rounded-lg shadow-2xl mb-20">
     <!-- Contenedor principal con flex -->
     <div class="flex flex-col md:flex-row items-center lg:space-x-8 justify-center">
@@ -10,10 +8,10 @@
         </h2>
         <p class="text-lg mb-6">Información sobre la emigración de uruguayos por el mundo y en España</p>
   
-        <!-- Botón para ver más eventos -->
+        <!-- Botón para ver más eventos
         <a href="#eventos" class="inline-block bg-yellow-400 text-white font-semibold text-lg py-2 px-6 rounded-full shadow-md hover:bg-yellow-500 transition duration-300 ease-in-out transform hover:scale-105">
           
-        </a>
+        </a> -->
       </div>
   
       <!-- Imagen 
