--- a/src/app/componentes/navegacion/navegacion.component.scss
+++ b/src/app/componentes/navegacion/navegacion.component.scss
@@ -1,8 +1,7 @@
 :host {
-  display: block;
   width: 100%;
-  z-index: 1000;
-  background-color: rgba(255, 255, 255, 0.1);
+  position: fixed;
+  z-index: 999;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
 }
@@ -12,41 +11,33 @@ a {
   transition: color 0.3s;
 }
 
+.fixed.inset-0 {
+ 
+  z-index: 1000;
+  top: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.dropdown-container {
+  position: relative;
+}
+
 .dropdown-menu {
-    position: absolute;
-    top: 100%;
-    right: 0;
-    width: 200px;
-    background-color: white;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    z-index: 10;
+  background-color: rgb(255, 255, 255);
+  z-index: 1001;
+  border-radius: 8px;
+  padding: 10px;
+  max-width: 200px;
   }
-  
+  button {
+    z-index: 1001;
+  }
+
   .saludo {
     font-size: 1.125rem;
     font-weight: 600;
     color: #14b8a6;
     padding-right: 10px;
   }
-  .fixed {
-    position: fixed;
-  }
-  .inset-0 {
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-  .bg-black {
-    background-color: #000;
-  }
-  .bg-opacity-50 {
-    opacity: 0.5;
-  }
-  .z-40 {
-    z-index: 40;
-  }
-  .z-50 {
-    z-index: 50;
-  }
+ 
