--- a/src/app/componentes/user/login/login.component.html
+++ b/src/app/componentes/user/login/login.component.html
@@ -1,8 +1,10 @@
 @if (isModalOpen) {
 
-<div class="fixed inset-0 bg-black bg-opacity-50 z-40">
-<div class="flex items-center justify-center min-h-screen login-container">
-    <div class="bg-yellow-100 border-2 border-yellow-300 rounded-lg shadow-lg p-8 w-full max-w-md z-10">
+<div class="flex items-center justify-center min-h-screen login-container fixed inset-0 bg-black bg-opacity-50 z-50">
+    <div class="bg-yellow-100 border-2 border-yellow-300 rounded-lg shadow-lg p-8 w-full max-w-md z-10 relative">
+      <button (click)="closeModal()" class="absolute top-2 right-2 text-xl text-gray-500 hover:text-gray-700 focus:outline-none">
+        &times;
+      </button>
       <div class="flex justify-center mb-6">
         <a href="/home">
         <img src="/assets/img/logo-uru.png" 
@@ -48,17 +50,14 @@
           Iniciar sesión
         </button>
       </form>
-  
+   
       <div class="mt-6 text-center">
         <p class="text-sm text-gray-400">
           ¿No tienes cuenta? 
           <a href="/registro" class="text-teal-400 hover:underline">Crear cuenta</a>
         </p>
       </div>
-      <button (click)="closeModal()" class="absolute top-2 right-2 text-xl text-gray-500">
-        &times;
-      </button>
+      
     </div>
-</div>
 </div>
 }
