--- a/src/app/componentes/user/registro/registro.component.html
+++ b/src/app/componentes/user/registro/registro.component.html
@@ -1,7 +1,7 @@
 @if(isModalOpen) {
-<div class="fixed inset-0 bg-black bg-opacity-50 z-40">
-    <div class="flex items-center justify-center min-h-screen">
-      <div class="bg-yellow-100 border-2 border-yellow-300 rounded-lg shadow-lg p-8 w-full max-w-md z-10">
+
+    <div class="flex items-center justify-center min-h-screen fixed inset-0 bg-black bg-opacity-50 z-50">
+      <div class="relative bg-yellow-100 border-2 border-yellow-300 rounded-lg shadow-lg p-8 w-full max-w-md z-10">
         <div class="flex justify-center mb-6">
           <a href="/home">
             <img src="/assets/img/logo-uru.png" alt="LogoUru" class="w-32 h-auto" />
@@ -9,7 +9,7 @@
         </div>
         <h2 class="text-lg font-semibold text-left text-black mb-4">Crea tu cuenta</h2>
 
-        <form [formGroup]="registroForm" (ngSubmit)="onSubmit()" class="space-y-4">
+        <form [formGroup]="registroForm" (ngSubmit)="onSubmit()" class="space-y-4 text-left">
           <!-- Campo Nombre -->
           <div>
             <label for="nombre" class="block text-sm font-medium text-black mb-1">Nombre</label>
@@ -86,9 +86,6 @@
               accept="image/*"
               (change)="onFileSelected($event)"
             />
-            <!-- @if(selectedFile) {
-              <div class="text-red-500 text-sm"></div>
-            } -->
           </div>
 
           <button
@@ -104,5 +101,4 @@
         </button>
       </div>
     </div>
-  </div>
   }
